Update colors and first section

--- a/index.html
+++ b/index.html
@@ -118,11 +118,11 @@
               var year = now.getFullYear() + 1;
 
               var nextyear = day + '/' + month + '/' + year;
-              var target = '09/20/2025 16:00:00';
+              var target = '09/20/2025 16:30:00';
 
               $('#countdown').countdown({
                 date: target, // TODO Date format: 07/27/2017 17:00:00
-                offset: +2, // Spain time Offset
+                offset: +0, // Spain time Offset
                 day: 'Día',
                 days: 'Días'
               });
@@ -170,11 +170,12 @@
         </div>
 
         <p class="bodytext" data-aos="fade-up" data-aos-easing="linear">
-          Texto 1
+          Desde tiempos inmemoriales, los antiguos pobladores de Ibiza creían que Es Vedrà era un lugar sagrado, un refugio de energía donde habitaba la diosa Tanit, protectora del amor, la fertilidad y la prosperidad. Bajo su influjo, marineros y viajeros acudían a este rincón del Mediterráneo para pedir bendiciones, protección y amores eternos.
           <br />
-          Texto 2
           <br />
-          Texto 3
+          Dicen que quienes se prometen amor bajo la mirada de Es Vedrà quedan unidos para siempre, sellando su destino con la fuerza de la diosa. Como si este islote fuera un portal entre mundos, un punto de encuentro entre el amor terrenal y la inmensidad del universo. Siguiendo la estela de esta antigua creencia, nos reunimos en esta isla mágica para celebrar nuestro amor, confiando en que las aguas que han sido testigo de tantas historias también guarden la nuestra.
+          <br />
+
         </p>
 
         <span class="space40px"></span>
@@ -182,19 +183,13 @@
 
         <div data-aos="fade-up" data-aos-easing="linear">
           <div class="nama-lengkap" >
-            Marc
+            Lara & Marc
           </div>
-          <div class="ampersand">&</div>
-          <div class="nama-lengkap">
-            Lara
-          </div>
-
         </div>
         <span class="space40px"></span>
         <div data-aos="fade-up" data-aos-easing="linear">
           <img src="image/naranjo_rama.png" class="divider has-text-centered" alt="~~~">
         </div>
-        <span class="space40px"></span>
         <span class="space40px"></span>
       </section>
       <!-- End regular-section-->
@@ -223,7 +218,7 @@
               <p class="fecha is-larger has-text-centered">
                 Inicio:
                 <br>
-                <strong>16:00h</strong>
+                16:00h
               </p>
 
             </div>
@@ -233,7 +228,7 @@
               <h1 class="fecha is-larger has-text-centered">
                 Fin:
                 <br>
-                <strong>04:00h</strong>
+                04:00h
               </h1>
 
 
