--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <link rel="stylesheet" href="https://unpkg.com/bulma@0.8.0/css/bulma.min.css" />
     <link rel="stylesheet" href="https://unpkg.com/bulma-tooltip@0.1.5/dist/bulma-tooltip.min.css" />
     <link rel="stylesheet" type="text/css" href="css/wedding.css" />
+    <link rel="stylesheet" type="text/css" href="css/timeline.css" />
     <link rel="stylesheet" type="text/css" href="css/jquery.countdown.css" />
     <script
       src="https://kit.fontawesome.com/2828f7885a.js"
@@ -260,6 +261,51 @@
               <br>
             </p>
           </div>
+          <script>
+            function addTimelineItem(img_src, hour, minutes, duration, description) {
+                // Create the timeline item container
+                const timelineItem = document.createElement("div");
+                timelineItem.classList.add("timeline__item");
+
+                // Inner HTML structure
+                timelineItem.innerHTML = `
+                    <div class="timeline__item-sign">
+                        <div class="timeline__item-icon">
+                            <img class="text-not-selectable" src="${img_src}" width="45" height="auto">
+                        </div>
+                    </div>
+                    <div class="timeline__item-interval">
+                        <div class="timeline__item-time">
+                            <input class="timeline__item-hours" type="text" maxlength="2" value="${hour}" readonly>
+                            <span class="timeline__item-dots">:</span>
+                            <input class="timeline__item-minutes" type="text" maxlength="2" value="${minutes}" readonly>
+                        </div>
+                        <div class="timeline__item-duration"><span>Duración: ${duration}</span></div>
+                    </div>
+                    <div class="timeline__item-time-line"></div>
+                    <div class="timeline__item-event">
+                        <div class="bp3-editable-text bp3-multiline" tabindex="0">
+                            <span class="bp3-editable-text-content">${description}</span>
+                        </div>
+                    </div>
+                `;
+
+                // Append to the timeline container
+                document.querySelector(".timeline-container").appendChild(timelineItem);
+            }
+            </script>
+
+            <div class="timeline-container"></div>
+            <script src="wedding.js"></script>
+            <script>
+              addTimelineItem("svg/ido.svg", "16", "30", "1 h", "Ceremonia");
+              addTimelineItem("svg/coctel.svg", "17", "30", "2 h", "Cóctel");
+              addTimelineItem("svg/dinner.svg", "19", "30", "3 h", "Cena");
+              addTimelineItem("svg/dance.svg", "22", "30", "30 min", "Baile");
+              addTimelineItem("svg/dj.svg", "23", "00", "5 h", "Fiesta");
+              addTimelineItem("svg/bus.svg", "04", "00", "5 min", "Fin");
+          </script>
+
           <div class="section-map" data-aos="fade-up" data-aos-easing="linear">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.140249610802!2d1.4861969756130684!3d38.989295371704586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12991548c39ef533%3A0xd2fa4c14fd7ab798!2sRestaurante%20Can%20Truy!5e0!3m2!1ses!2sit!4v1740747800893!5m2!1ses!2sit" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
