Add toTop button

--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
       <span class="space40px"></span>
        <!-- Begin Fecha Section -->
        <section class="section-nebulosa" data-aos="fade-up" id="confirmaAsistenciaButton">
-        <div class="nama-lengkap" data-aos="fade-up" >
+        <div class="nombre-asistencia" data-aos="fade-up" >
           Lara & Marc
         </div>
         <div class="google-button has-text-centered" data-aos="fade-up" >
