--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                 </a>
               </div>
               <div class="navbar-item">
-                <a class="navbar-item" href="#faq">
+                <a class="navbar-item" href="#horario">
                   Horario
                 </a>
               </div>
