--- a/index.html
+++ b/index.html
@@ -111,9 +111,9 @@
               <li class="separator">:</li>
               <li><span class="hours">00</span><p class="hours_text">Horas</p></li>
               <li class="separator">:</li>
-              <li><span class="minutes">00</span><p class="minutes_text">Minutos</p></li>
+              <li><span class="minutes">00</span><p class="minutes_text">Mins.</p></li>
               <li class="separator">:</li>
-              <li><span class="seconds">00</span><p class="seconds_text">Segundos</p></li>
+              <li><span class="seconds">00</span><p class="seconds_text">Segs.</p></li>
             </ul>
             <div class="spasi">
             </div>
