Replace toTop button with toggle menu to navigate the page

--- a/index.html
+++ b/index.html
@@ -37,7 +37,17 @@
   </head>
 
   <body>
-    <button id="toTop" onclick="scrollToTop()">↑</button>
+    <button id="menuToggle">
+      <img src="image/orange_icon.png" alt="Menu" />
+    </button>
+
+    <div id="floatingMenu">
+      <a href="#confirmaAsistenciaButton">Formulario</a>
+      <a href="#horario">Horario</a>
+      <a href="#Fecha">Fecha</a>
+      <a href="#lugar">Lugar</a>
+      <a href="#faq">F.A.Q.</a>
+    </div>
     <!-- Begin Preloader -->
     <div class="preloader-wrapper">
       <div class="preloader">
