Add cantruy instagram post

--- a/index.html
+++ b/index.html
@@ -342,6 +342,20 @@
           </div>
 
 
+        <link href="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.css" rel="stylesheet">
+
+        <div data-aos="fade-up" style="display: flex; justify-content: center;">
+          <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/p/Cw0E_3fNtSq/" data-instgrm-version="14"></blockquote>
+        </div>
+
+
+        <script async src="//www.instagram.com/embed.js"></script>
+
+        <script src="https://cdn.jsdelivr.net/npm/aos@2.3.4/dist/aos.js"></script>
+        <script>
+          AOS.init();
+        </script>
+
           <div class="section-map" data-aos="fade-up" data-aos-easing="linear">
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3101.140249610802!2d1.4861969756130684!3d38.989295371704586!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x12991548c39ef533%3A0xd2fa4c14fd7ab798!2sRestaurante%20Can%20Truy!5e0!3m2!1ses!2sit!4v1740747800893!5m2!1ses!2sit" width="100%" height="450" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
           </div>
